GJ-254 Snowflake Chapter 7 (#31)
* Outline timeseries notes

* Snowflake chapter 7 notes

* More chapter 4 notes

* Render

--- a/posts/software/snowflake/snowpro_notes.qmd
+++ b/posts/software/snowflake/snowpro_notes.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Snowflake: SnowPro Core"
 description: "Snowflake? Snow Problem."
-date: "2025-02-11"
+date: "2025-02-13"
 # image: "deep_learning_model.png"
 categories: [Software, DataEngineering]
 ---
@@ -913,6 +913,8 @@ Sequences are **not** guaranteed to be *gap-free*.
 
 Sequences are *securable objects* that we can grant privileges to.
 
+It is a **schema object** like: Functions, Stored Procedures, Tables, File Formats, Stages, Stored Procedures, UDFs, Views, and Materialized Views.
+
 ```
 CREATE SEQUENCE my_seq
 START = 1
@@ -954,7 +956,7 @@ We typically let Snowflake convert semi-structured data into a *hierarchy of arr
 
 Nulls and non-native strings like dates are *cast to strings* within a variant. 
 
-Variant can store up to **16 MB per row**. 
+Variant can store up to **16 MB uncompressed per row**. 
 If the data exceeds this, we will need to restructure or split the input. 
 
 The standard “ELT” approach (Extract, Load, Transform) for semi-structured data is to load the data as is, then transform it later once we’ve eyeballed it. 
@@ -999,12 +1001,108 @@ FROM table_with_variant
 
 
 ### 4.8.3. Flatten Hierarchical Data
+We may want to flatten the hierarchies within semi-structured datainto a relational table.
+We do this with the `FLATTEN` table function.
+
+```
+FLATTEN(INPUT => <expression>)
+```
+
+Note that `FLATTEN` cannot be used inside a `COPY` command.
+
+We can use it alongside the other keys of the data. For example:
+```
+SELECT
+    RAW_FILE:id,
+    RAW_FILE:first_name,
+    VALUE as prev_company  -- this is the flatten array
+FROM 
+    MY_DB.PUBLIC.JSON_RAW_TABLE,
+    TABLE(FLATTEN(input => RAW_FILE:previous_companies))
+```
+
+There is an implicit lateral join between the table and the flattened table function result set.
+We can make this explicit using the `LATERAL FLATTEN` keywords. The result is the same.
 
 
 ### 4.8.4. Insert JSON Data
 
+We use the `PARSE_JSON` function to import JSON data.
+```
+SELECT PARSE_JSON(' { "key1": "value1", "key2": "value2" } ');
+```
+
+When inserting `variant` data, we don't use `INSERT VALUES`, we use a `SELECT` statement.
+```
+INSERT INTO semi_structured_table_name
+SELECT PARSE_JSON(' { "key1": "value1", "key2": "value2" } ');
+```
 
 ## 4.9. Unstructured Data
+Unstructured data is any data which does not fit in a pre-defined data model.
+E.g. video files, audio files, documents.
+
+Snowflake handles unstructured data using **file URLs**.
+
+Snowflake supports the following for both internal and external stages:
+
+1. Access through URL in cloud storage
+2. Share file access URLs
+
+
+### 4.9.1. File URLs
+There are three types of URL we can share:
+
+| URL Type       | Use Case                                                               | Expiry                                                  | Command to Return URL   |
+|----------------|------------------------------------------------------------------------|---------------------------------------------------------|-------------------------|
+| Scoped URL     | Encoded URL with **temporary access** to a *file* but not the *stage*. | Expires when results cache expires (currently 24 hours) | `BUILD_SCOPED_FILE_URL` |
+| File URL       | Permits **prolonged access** to a specified file.                      | Does not expire.                                        | `BUILD_STAGE_FILE_URL`  |
+| Pre-signed URL | HTTPS URL used to access a file via a web browser.                     | Configurable expiration time for access token.          | `GET_PRESIGNED_URL`     |
+
+
+For example, run the following SQL file function to create a scope URL:
+```
+SELECT BUILD_SCOPED_FILE_URL(@stage_azure, 'Logo.png')
+```
+
+For a pre-signed URL, we also set the expiry time in seconds.
+```
+SELECT GET_PRESIGNED_URL(@stage_azure, 'Logo.png', 60)
+```
+
+### 4.9.2. Directory Tables
+A directory table **stores metadata of staged files**.
+
+This is layered on a stage, rather than being a separate table object in a database.
+
+It can be queried, with sufficient privileges on the stage, to retrieve file URLs to access files on the stage.
+
+It **needs to be enabled** as it is not by default. We either do this in the `CREATE STAGE` command with 
+```
+CREATE STAGE stage_azure
+URL = <'url'>
+STORAGE_INTEGRATION = integration
+DIRECTORY = (ENABLE = TRUE)
+```
+
+or `ALTER` an existing stage:
+```
+ALTER STAGE stage_azure
+SET DIRECTORY = (ENABLE = TRUE)
+```
+
+We query this directory with:
+```
+SELECT * FROM DIRECTORY(@stage_azure)
+```
+
+The first time querying, so will not see any results. 
+The directory needs to be *manually populated* with:
+```
+ALTER STAGE stage_azure REFRESH
+```
+
+We may want to use the cloud provider's event notification to set up an automatic refresh.
 
 
 ## 4.10. Data Sampling
@@ -1181,7 +1279,7 @@ ALTER TABLE table_name (
 We can set a *minimum value* at the account level:
 ```
 ALTER ACCOUNT SET 
-MIN_ DATA_RETENTION_TIME_IN_DAYS=3
+MIN_DATA_RETENTION_TIME_IN_DAYS=3
 ```
 
 The **account type determines the maximum retention period**:
@@ -1233,7 +1331,6 @@ The temporary table name takes precedence in the session and hides the others wi
 It is **not possible to change the type** of an existing object. 
 
 
-
 # 7. Zero-Copy Cloning and Sharing
 
 ## 7.1. Zero Copy Cloning
@@ -1279,8 +1376,9 @@ BEFORE (TIMESTAMP >= ‘2025-01-31 08:00:00’)
 
 
 ## 7.2. Privileges
-
-The **privileges of the CHILD objects are inherited from the clone source**, but the **privileges of the cloned object itself are NOT inherited** (i.e. the cloned database or schema). They need to be specified separately by the administrator. 
+The **privileges of the CHILD objects are inherited from the clone source** if it is a container like a table or schema.
+But the **privileges of the cloned object itself are NOT inherited**. 
+They need to be specified separately by the administrator. 
 
 The privileges required to clone an object depends on the object:
 
@@ -1291,6 +1389,111 @@ The privileges required to clone an object depends on the object:
 When we clone a table, its **load history metadata is NOT copied**. 
 This means loaded data can be loaded again without causing a metadata clash. 
 
+
+## 7.3. Data Sharing
+### 7.3.1. What is a Data Share?
+Data sharing can usually be quite complicated; managing multiple extracts of a common database and ensuring they are in sync.
+
+Snowflake separates storage vs compute. This allows us to **share data without actually making a copy of it**. As with zero copy cloning, this is a metadata operation, so uses the cloud service layer.
+
+We grant access to the storage, and the customer provides their own compute resources.
+
+This is available for all Snowflake pricing tiers.
+
+In a one-way data share, Account 1 is the provider and Account 2 is the Consumer. Account 2 has a read-only view of the shared data.
+The **provider is billed for the storage**, whereas the **consumer is billed for the compute** costs of their queries.
+
+![Data Sharing One Way](data_sharing_provider_consumer.png)
+
+An account can be simultaneously both a provider and consumer of data. You can even do this within the same account.
+
+![Data Sharing Two Way](data_sharing_two_way.png)
+
+
+A share contains a **single database**. We can add *multiple accounts* to a share.
+
+
+### 7.3.2. How to Set Up a Data Share
+To set up a data share we need to:
+
+(1) Create the share -  requires `ACCOUNTADMIN` role or `CREATE SHARE` privileges.
+```
+CREATE SHARE my_share;
+```
+
+(2) Grant privileges to the share
+```
+GRANT USAGE ON DATABASE my_db TO_SHARE my_share;
+GRANT USAGE ON SCHEMA my_schema.my_db TO_SHARE my_share;
+GRANT SELECT ON TABLE my_table.my_schema.my_db TO_SHARE my_share;
+```
+
+(3) Add consumer accounts
+```
+ALTER SHARE my_share ADD ACCOUNT = accountid123;
+```
+
+(4) The consumer imports the share - requires `ACCOUNTADMIN` role, or `IMPORE SHARE` & `CREATE TABLE` privileges
+```
+CREATE DATABASE new_db FROM SHARE my_share;
+```
+
+
+### 7.3.3. What Can Be Shared
+
+We can share: tables, external tables, secure views, secure materialised views, secure UDFs.
+
+The share itself is a container containing one database, against which we can grant usage on scehma(s) and grant privileges to object(s).
+We can have one or more accounts that we grant access to.
+
+It is a *best practice* to create **secure views** to avoid revealing unintended data. 
+With an unsecured view, the user can see the command used to create the table, which could reveal the internal table used to create the view, columns not exposed to the user, aliases, etc.
+
+Snowflake will raise an error if trying to grant privileges to a **standard view**; they cannot be shared.
+
+If sharing data with a lower tier Snowflake account, by default it won't let you add a consumer account.
+We can override this by specifying `SHARE_RESTRICTIONS=false`.
+
+```
+ALTER SHARE my_share 
+ADD ACCOUNT accountid123
+SHARE_RESTRICTIONS = false;
+```
+
+
+## 7.4. Database Replication
+Data shares are only possible within the same region and the same cloud provider.
+
+Database replication allows us to **share data across different regions or on different cloud providers**.
+It replicates a database between accounts within the same organisation.
+Also called *"cross-region sharing"*. This is available at all price tiers.
+
+This incurs **data transfer costs** because it **does** actually copy the data across to a different location.
+The data and objects therefore need to be synchronised periodically.
+
+The provider is referred to as the **primary database** and the consumer is the **secondary database** or a **read-only replica**.
+
+To set up database replication we need to:
+
+(1) Enable this at the account level with the ORGADMIN role.
+```
+SELECT system$global_account_set_parameter(org_name.account_name), 'ENABLE_ACCOUNT_DATABASSE_REPLICATION', 'true');
+```
+
+(2) Promote a local database to **primary database** with ACCOUNTADMIN role.
+```
+ALTER DATABASE my_db ENABLE REPLICATION TO ACCOUNTS myorg.account2, myorg.account3;
+```
+
+(3) **Create a replica** in the consumer account.
+```
+CREATE DATABASE my_db AS REPLICA OF myorg.account1.my_db
+```
+
+(4) **Refresh** the database periodically. Ownership privileges are needed. We may want to set up a task to run this periodically.
+```
+ALTER DATABASE my_db REFRESH;
+```
 
 
 # 8. Account and Security
