Publish WIP timeseries

--- a/posts/ml/timeseries/timeseries.ipynb
+++ b/posts/ml/timeseries/timeseries.ipynb
@@ -11,10 +11,9 @@
     "---\n",
     "title: \"Time Series Analysis\"\n",
     "description: \"Time well spent\"\n",
-    "date: \"2025-02-07\"\n",
+    "date: \"2025-02-15\"\n",
     "# image: \"deep_learning_model.png\"\n",
     "categories: [Engineering, Timeseries]\n",
-    "# draft: true\n",
     "---"
    ]
   },
@@ -10587,20 +10586,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.5. Correlations and Autocorrelations\n",
+    "<!-- ## 1.5. Correlations and Autocorrelations\n",
     "### Correlation\n",
     "### Autocorrelation\n",
     "Serial dependence https://www.kaggle.com/code/ryanholbrook/time-series-as-features\n",
     "Lag plots (same link as above)\n",
     "\n",
-    "### Partial Autocorrelation"
+    "### Partial Autocorrelation -->"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  2. Feature Engineering\n",
+    "<!-- #  2. Feature Engineering\n",
     "## Nulls\n",
     "\n",
     "\n",
@@ -10668,7 +10667,7 @@
     "\n",
     "## Foundational Models\n",
     "\n",
-    "\n"
+    " -->\n"
    ]
   },
   {
