Minor changes to time series notes

--- a/posts/ml/timeseries/timeseries.ipynb
+++ b/posts/ml/timeseries/timeseries.ipynb
@@ -10592,7 +10592,10 @@
     "Serial dependence https://www.kaggle.com/code/ryanholbrook/time-series-as-features\n",
     "Lag plots (same link as above)\n",
     "\n",
-    "### Partial Autocorrelation -->"
+    "### Partial Autocorrelation \n",
+    "\n",
+    "## 1.6. Granger Causality\n",
+    "-->"
    ]
   },
   {
@@ -10678,10 +10681,15 @@
    "source": [
     "# References\n",
     "\n",
-    "- https://www.kaggle.com/learn/time-series\n",
-    "- https://www.kaggle.com/code/ryanholbrook/trend\n",
-    "- https://otexts.com/fpp2/stationarity.html"
+    "- [Kaggle Timeseries Course](https://www.kaggle.com/learn/time-series)\n",
+    "- [Trend notebook](https://www.kaggle.com/code/ryanholbrook/trend)\n",
+    "- [Forecasting: Principles and Practice by Rob J Hyndman and George Athanasopoulos](https://otexts.com/fpp2/stationarity.html)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
